--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@libsql/client": "^0.8.1",
+    "@prisma/adapter-libsql": "^6.5.0",
     "@prisma/client": "^6.3.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
